--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -5,8 +5,7 @@ on:
     types: [started]
     
 env:
-  ROM_LINK: your rom's direct link
-  ROM_LINK: https://downloads.sourceforge.net/project/kevios12a40roms/RELEASE/evolution_a40-ota-rq3a.210905.001-09191220-unofficial-unsigned.zip?ts=gAAAAABhSKfwG2QmwbDIWKLOsgwwVZpzfw45QWhlvk2t-51g5yZWGXMnwAyLCRp3mGdunmuAJJO_fBy4HdKWcfKfI9YvuCEywg%3D%3D&use_mirror=autoselect&r=https%3A%2F%2Fsourceforge.net%2Fprojects%2Fkevios12a40roms%2Ffiles%2FRELEASE%2Fevolution_a40-ota-rq3a.210905.001-09191220-unofficial-unsigned.zip%2Fdownload
+  ROM_LINK: https://getmega.net/download/file_4f12165928/OUKITEL_RT3_S_EEA_V05_20221117%EF%BC%88%E9%87%8F%E4%BA%A7%E7%89%88%E6%9C%AC20221209%EF%BC%89.rar
   ROM_TYPE: Generic
   BUILD_AB: true
   BUILD_AONLY: false
